usability: avoid gap between a wrapped link in aside bar
The upcoming conference links are wrapped and clicking between should activate the link, not require the user to decide to click the upper or bottom line of the link.

--- a/styles/theme-medium.css
+++ b/styles/theme-medium.css
@@ -410,6 +410,8 @@ aside.tips h3 {
 aside.tips a {
   color:#ccc;
   border-bottom:1px dotted #666;
+  display:inline-block;
+  vertical-align:top;
 }
 aside.tips .panel > a:after,
 aside.tips .panel > span:after {
